[package]
name = "web-socket-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = {version = "0.9.4", features = ["typed-header"]}
futures = "0.3.31"
futures-util = { version="0.3.31", default-featuers = false, features=["sink","std"]}
headers = "0.4"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
